Solve overflow by making calculator bigger

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     border: 1px solid black;
     height: 25%;
     padding-right:5px;
-    font-size: 2rem;
+    font-size: 2.5rem;
     overflow: auto;
 
 }
@@ -15,7 +15,7 @@
     justify-content: flex-end;
     color: darkcyan;
     overflow: hidden;
-    height: 10%;
+    height: 5%;
 }
 
 
@@ -38,9 +38,9 @@
     flex-direction: column;
     flex: auto;
     justify-content: center;
-    height: 250px;
-    width: 250px;
-    margin-top: 15%;
+    height: 500px;
+    width: 500px;
+    margin-top: 10%;
     
 }
 
@@ -68,7 +68,7 @@ button{
     box-sizing: border-box;
     flex: 1 1 100%;
     text-align: center;
-    font-size: 1.2rem;
+    font-size: 2rem;
 }
 
 .number-column > div{
@@ -84,7 +84,7 @@ button{
 }
 
 .operator-column button{
-    font-size: 1.3rem;
+    font-size: 2rem;
     background-color: lightgray;
 }
 
